# pdfcmds

./: CLAUDE.md  README.md  pyproject.toml
pdfcmds/: __init__.py  cli.py
tests/: test_convert.py  test_image_path_bug.py
