[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfcmds"
dynamic = ["version"]
description = "Command-line tools for PDF manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",
    "pymupdf-layout>=1.26.0",
    "opencv-python>=4.8.0",
    "click>=8.0.0",
]

[project.scripts]
pdf = "pdfcmds.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "pdfcmds.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
